<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rows"
        android:id="@+id/tvRowsLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/etRows"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="2"
        app:layout_constraintLeft_toRightOf="@+id/tvRowsLabel"
        android:id="@+id/etRows"
        android:layout_marginLeft="8dp"
        android:inputType="numberSigned"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/columns"
        android:id="@+id/tvColsLabel"
        app:layout_constraintLeft_toRightOf="@+id/etRows"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCols"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="2"
        app:layout_constraintLeft_toRightOf="@+id/tvColsLabel"
        android:id="@+id/etCols"
        android:layout_marginLeft="8dp"
        android:inputType="numberSigned"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etRows"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/rgOptions">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:checked="true"
            android:id="@+id/rbStart"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:id="@+id/rbEnd"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocked"
            android:id="@+id/rbBlocked"/>

    </RadioGroup>

    <org.skynetsoftware.pathfinder.PathView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/rgOptions"
        app:layout_constraintBottom_toTopOf="@+id/btnSolve"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/pathView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        android:onClick="solve"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnSolve"/>

</android.support.constraint.ConstraintLayout>